adding surgery research

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -55,26 +55,27 @@
         </div>
 
       <div id="content">
-        <div class="projectTitleBox titleBackgroundWebMD container">
+        <div class="projectTitleBox webmdBlueBack container">
             <div class="logoAndTitleContainer">
               <div class="webmdLogoAndTitle">
                 <img class="projectLogoWebmd webmdLogo" alt="WebMD Logo" src="myimages/webmd/intro/webmd-logo.png">
               </div>
               <div class="webmdLogoAndTitle">
-                <p class="projectTitle">Biometric Generated News Native App & Companion Wearable</p>
+                <p class="projectTitle">Health Care Hub</p>
+                <p class="projectSubTitle">Biometric Generated News Native App & Companion Wearable</p>
               </div>
           </div>
         </div>
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle webmdGreen">Our Challange</p>
-            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more personalized experience.
+            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more inovative, personalized experience leading to frequent, hopefully daily, engagament.
           </p>
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle webmdGreen">My Role</p>
-            <p class="boxText heavyText"> We worked collaboratively, and each of us participated in the entire design processes, but my most prominent roles: presentation creation and delivery, survey and interview question development, interviews, ideation, concept creation, design, task analysis, and user testing.
+            <p class="boxText heavyText"> The three of us worked collaboratively as a team for 2 weeks, each of us participated in the entire design processes. However, my most prominent roles were in: ideation, concept creation, survey and interview question development, interviews, design, task analysis, user testing, presentation creation and delivery.
           </p>
       </div>
         </div>
@@ -147,7 +148,7 @@
       </div>
       <div class="strengthWeak  swotRec webmdBlueBack">
         <p class="swotTitle">Weaknesses</p>
-        <p>- Perceived as having  &#34;fluffy &#34; articles, not definitive answers or statistics</p>
+        <p>- Perceived as having &#34;fluffy &#34; articles, not definitive answers or statistics</p>
         <p>- Main revenue source, ads, deters customer retention</p>
         <p>- TMI, too much information, users get lost</p>
       </div>
@@ -191,9 +192,46 @@
       <img class="researchSummary" alt="Summary of Research" src="myimages/webmd/research/research-summary.png">
     </div>
 
-  <div><p class="statement webmdBlue">Survey resulted in 3 key insights.</p></div>
+<div><p class="statement webmdBlue">Initial key survey and interview results.</p></div>
 
-<div><p class="statement webmdGreen ">In-depth interview insights</p></div>
+<div class="heavyText surveyResultsP">
+    <p>WebMD serves a <b>diverse group of clients</b> all of which have different health information needs, socioeconomic stats, technological capabilties, and demographics - <b>a difficult audience to please.</b></p>
+
+    <p>While experience with WebMD varied for our survey takers, <b>what we know for sure is WebMD is far from our goal of making it a daily habit</b>.</p>
+</div>
+
+<div class="surveyResults">
+  <div class="surveyResultsSec">
+      <div class="surveyConclusion webmdBlueBack">
+      <p class="surveyConclusionText">People don&#39;t visit WebMD often</p>
+      </div>
+      <div class="surveyCircles">
+        <img class="surveyCirclesImg" alt="Circles with Research Results" src="myimages/webmd/research/sick-circles.png">
+      </div>
+  </div>
+
+  <div class="surveyResultsSec">
+      <div class="surveyQuotes">
+        <p>&#34;I don&#39;t spend too much time on WebMD, just try to get the info and leave.&#34; Bob, 28, Web Developer</p>
+        <p>&#34;I try not to look at health stuff online&#8230; my husband says stop&#8230; you will freak yourself out!&#34; Helen, 20, Thirft Store Manager</p>
+      </div>
+      <div class="surveyConclusion surveyConclusion2 webmdBlueBack">
+        <p class="surveyConclusionText">And&#8230; People don&#39;t stay long</p>
+      </div>
+  </div>
+
+  <div class="surveyResultsSec">
+      <div class="surveyConclusion webmdBlueBack">
+          <p class="surveyConclusionText">People prefer apps<br> &amp want to try wearables</br></p>
+      </div>
+      <div class="surveyCircles">
+        <img class="surveyCirclesImg" alt="Circles with Research Results" src="myimages/webmd/research/apps-wearables.png">
+      </div>
+  </div>
+</div>
+
+
+<div><p class="statement webmdGreen ">Other interview insights</p></div>
 
 <div class="squareRec">
 
@@ -205,7 +243,7 @@
     <div class= "square heavyText">
       <p class="interviewTitle webmdBlue"><b>Warren</b>, 95</p>
       <p class="interviewTitle webmdBlue">Retired Forester</p>
-      <p>&#34;I could see using one in the future, <b>especially if it would alert someone automatically if I had a stroke or remind me to take my meds</b>, I wouldn&#39;t forget like I do now.&#34;</p>
+      <p class="interviewQuotes">&#34;I could see using one in the future, <b>especially if it would alert someone automatically if I had a stroke or remind me to take my meds</b>, I wouldn&#39;t forget like I do now.&#34;</p>
 
     </div>
   </div>
@@ -220,14 +258,14 @@
 
     <div class= "square heavyText ">
       <p class="interviewTitle webmdBlue"><b>Nancy</B>, 68</p>
-        <p class="interviewTitle webmdBlue">Retired Teacher</p>
-      <p>&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and <b>then I am in some ad</b>. I don&#39;t know how I got there, <b>and now I am lost in the site.</b>&#34;</p>
-      </div>
+      <p class="interviewTitle webmdBlue">Retired Teacher</p>
+      <p class="interviewQuotes">&#34;WebMD can be so frustrating. I will be clicking on news for high blood pressure and <b>then I am in some ad</b>. I don&#39;t know how I got there, <b>and now I am lost in the site.</b>&#34;</p>
+    </div>
 
   </div>
 
   <div class="squareRecSec recPaddimg">
-    <div class="rec rec4 lightGreyBack charcol">
+    <div class="rec lightGreyBack charcol">
       <p> Changes preferences often</p>
     </div>
 
@@ -241,8 +279,8 @@
     </div>
   </div>
 
-  <div class="squareRecSec">
-    <div class="rec rec5 charcolBack">
+  <div class="squareRecSec recPaddimg">
+    <div class="rec charcolBack white">
       <p>Loves apps with personalized news</p>
     </div>
       <img class="faceCircles" alt="3 Circles" src="myimages/webmd/research/sarah.png">
@@ -288,10 +326,28 @@
     <div class="findingsCircle webmdGreenBack"></div>
 
     <div class="findingsText">
-      <p class="heavyText">It became clear that <b>WebMD needs to make some major changes or implement a really innovative idea to take a ~4x per year visitor to</b> someone that uses WebMD as part of <b>a daily habit</b></p>
+      <p class="heavyText">People are comfortable using apps for health in formation, many even prefer it</p>
     </div>
 
 </div>
+<div class="findings">
+    <div class="findingsCircle webmdGreenBack"></div>
+
+    <div class="findingsText">
+      <p class="heavyText">Not that many people have wearables, but most are interested in trying them. </p>
+    </div>
+
+</div>
+
+<div class="findings">
+    <div class="findingsCircle webmdGreenBack"></div>
+
+    <div class="findingsText">
+      <p class="heavyText"><b>WebMD needs to implement a really innovative idea to take a ~4x per year visitor to</b> someone that uses WebMD as part of <b>a daily habit</b></p>
+    </div>
+
+</div>
+
 </div>
 
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
