surgery results formatting

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -211,13 +211,16 @@
   </div>
 
   <div class="surveyResultsSec">
+    <div class="surveyConclusion webmdBlueBack">
+      <p class="surveyConclusionText">And&#8230; People don&#39;t stay long</p>
+    </div>
       <div class="surveyQuotes">
-        <p>&#34;I don&#39;t spend too much time on WebMD, just try to get the info and leave.&#34; Bob, 28, Web Developer</p>
-        <p>&#34;I try not to look at health stuff online&#8230; my husband says stop&#8230; you will freak yourself out!&#34; Helen, 20, Thirft Store Manager</p>
+        <p>&#34;<b>I don&#39;t spend too much time on WebMD</b>, just try to <b>get the info and leave.</b>&#34;</p>
+          <p>Bob, 28, Web Developer</p>
+        <p class="quote2">&#34;I try not to look at health stuff online&#8230; my husband says stop&#8230; you will freak yourself out!&#34;</p>
+        <p> Sarah, 20, Store Manager</p>
       </div>
-      <div class="surveyConclusion surveyConclusion2 webmdBlueBack">
-        <p class="surveyConclusionText">And&#8230; People don&#39;t stay long</p>
-      </div>
+
   </div>
 
   <div class="surveyResultsSec">
