--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -69,7 +69,7 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle webmdGreen">Our Challange</p>
-            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more inovative, personalized experience leading to frequent, hopefully daily, engagament.
+            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more inovative, personalized experience leading to frequent (and maybe even daily) engagament.
           </p>
           </div>
 
@@ -105,15 +105,18 @@
             <div class="approachCircle approachCircle1"><p class="approachNumber">1</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
-              <div class="approachSubPoints"><p>Increase acquisition and retention by finding a way to generate daily engagement</p></div>
+              <div class="approachSubPoints"><p>Increase acquisition and retention</p></div>
+              <div class="approachSubPoints"><p>Find a way to encourage daily engagement</p></div>
             </div>
-        </div>
+          </div>
+
 
           <div class="approachSections">
               <div class="approachCircle approachCircle2"><p class="approachNumber">2</p></div>
               <div class="approachText">
                 <div class="approachPoints"><p>Extensive Competitive Review</p></div>
                 <div class="approachSubPoints"><p>How does WebMD stack up to the competition?</p></div>
+                <div class="approachSubPoints"><p>What challenges will new health care start-ups casue for webMD? </p></div>
               </div>
           </div>
 
@@ -121,18 +124,20 @@
               <div class="approachCircle approachCircle3"><p class="approachNumber approachNumber3">3</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
-              <div class="approachSubPoints"><p>XXXXXX </p></div>
+              <div class="approachSubPoints"><p>Who is the average WebMD user?</p></div>
+              <div class="approachSubPoints"><p>Why do they come to WebMD? Why do they leave?</p></div>
             </div>
           </div>
 
           <div class="approachSections">
             <div class="approachCircle"><p class="approachNumber approachNumber4">4</p></div>
             <div class="approachText">
-              <div class="approachPoints"><p>XXXXXX</p></div>
-              <div class="approachSubPoints"><p>Would WebMD users be better served by a website redesign or an app? Would integrating a wearable serve users and business needs? </p></div>
+              <div class="approachPoints"><p> Create an innovative, personalized experience </p></div>
+              <div class="approachSubPoints"><p>Would WebMD users be better served by a website redesign or an app? </p></div>
+              <div class="approachSubPoints"><p> Would integrating a wearable serve user and business needs? </p></div>
             </div>
           </div>
-  </div>
+    </div>
 
 
         <div><p class="statement webmdGreen">SWOT</p></div>
@@ -142,13 +147,13 @@
     <div class="topSwot">
       <div class="strengthWeak swotRec webmdBlueBack">
         <p class="swotTitle">Strengths</p>
-        <p>- Strong SEO, top of most of healthcares searches</p>
+        <p>- Strong SEO, top of most of health care searches</p>
         <p>- Easy to understand, uses layman&#39;s terms</p>
         <p>- Allows people to advocate for themselves with their doctor</p>
       </div>
       <div class="strengthWeak  swotRec webmdBlueBack">
         <p class="swotTitle">Weaknesses</p>
-        <p>- Perceived as having &#34;fluffy &#34; articles, not definitive answers or statistics</p>
+        <p>- Perceived as having &#34;fluffy &#34; articles, no definitive answers or statistics</p>
         <p>- Main revenue source, ads, deters customer retention</p>
         <p>- TMI, too much information, users get lost</p>
       </div>
@@ -158,13 +163,13 @@
       <div class="oppThreats  swotRec webmdBlueBack">
         <p class="swotTitle">Opportunities</p>
         <p>- API opportunity with health apps and wearable makers</p>
-        <p>- Wearable co-promotion with Garmin wearable could bring web MD from 4x times a year to a daily habit<p>
-        <p>- Could co-market wearable on WebMD site</p>
+        <p>- A WebMD device compromoted with wearable maker could help to make WebMD a daily habit<p>
+        <p>- Could market wearables on WebMD site</p>
       </div>
       <div class="oppThreats swotRec webmdBlueBack">
         <p class="swotTitle">Threats</p>
         <p>- Competitors sites are very well respected sources of health care information</p>
-        <p>- Health care start-ups for health & information and wearables gaining ground</p>
+        <p>- Health care start-ups for health information and for wearables are gaining ground</p>
         </p>
       </div>
     </div>
