WebMD Competition-Strategy

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -69,7 +69,7 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle webmdGreen">Our Challange</p>
-            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more inovative, personalized experience leading to frequent (and maybe even daily) engagament.
+            <p class="boxText heavyText">WebMD is well known for being a key source of health issues and having a vast amount of content available to its users. However, given competition in the online health space is growing rapidly, the management believes that users want a more inovative, personalized experience leading to frequent (and maybe even daily) engagement and better retention.
           </p>
           </div>
 
@@ -138,9 +138,14 @@
             </div>
           </div>
     </div>
+    <div><p class="statement webmdBlue">Health care information market fragmented &amp diverse</p></div>
 
+<div class="compDiv">
+    <img class="compShots" alt="Competition screen shots" src="myimages/webmd/strategy/webmd-competition.png">
+    <img class="compBracket" alt="Bracket Pointing to Conclusion" src="myimages/webmd/strategy/bracket.png">
+</div>
 
-        <div><p class="statement webmdGreen">SWOT</p></div>
+  <div><p class="statement webmdGreen">SWOT</p></div>
         <img class="swotFly" alt="Fly & Swatter" src="myimages/webmd/strategy/fly-swot.png">
   <div class="swot">
 
@@ -168,17 +173,18 @@
       </div>
       <div class="oppThreats swotRec webmdBlueBack">
         <p class="swotTitle">Threats</p>
-        <p>- Competitors sites are very well respected sources of health care information</p>
-        <p>- Health care start-ups for health information and for wearables are gaining ground</p>
+        <p>- Competitors sites (CDC, Mayo) are very well respected sources of health care information</p>
+        <p>- Health care start-ups are on the rise: 2,700 on Angel List alone and many more already public</p>
+        <p>- Fit wearables continue to expand their data offerings</p>
         </p>
       </div>
     </div>
   </div>
-      <div><p class="statement webmdBlue">Focus on competing only with lead generators.</p></div>
 
-      <div><p class="statement webmdGreen">Opportunities to improve on the competition.</p></div>
+      <div><p class="statement webmdGreen">If you can't beat 'em join 'em.</p></div>
 
-      <div><p class="statement webmdBlue">Recommendations.</p></div>
+
+      <div><p class="statement webmdBlue">Strategic recommendations</p></div>
 
         <div class="circleRecWrapper">
 
