Added to synthesis section and personas

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -406,123 +406,137 @@
 
   <img class="journeyMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
 </div>
+<div class="painPoints">
+  <p>Pain Points include:</p>
+  <p>Accidently fing your self in sponsor generated content</p>
+  <p>Not being able to find...</p>
+</div>
 
-  <p class="statement">Storyboard demonstates interactions with app and wearable </p>
-  <p class="storyBoardSub">And my stick figures are ledgendary</p>
+
+  <!-- <p class=" statement webmdBlue">Affinity Map idenitifies the key pain points</p> -->
+
+  <div class="">
+
+  <p class=" statement storyboardTitle">Storyboard demonstrates interactions with app and wearable</p>
+
+  <p class="storyboardSubtitle charcol">And my stick figures are ledgendary</p>
+
+  </div>
+  <!-- <p class="storyBoardSub">And my stick figures are ledgendary</p> -->
 
 <div class="storyBoardDiv">
   <img class="storyBoard" alt="Story Board" src="myimages/webmd/synthesis/story-board.png">
 </div>
 
 <div class="">
-    <div class="statement userFlowTitle">Our personas</div>
+    <div class="statement statementPersonas webmdGreen">Our personas</div>
 </div>
 
 <div class="row personaParent">
-  <!-- Ajay -->
-<table>
+
+<table  class="personas">
   <!-- GIT HUB class="col-md-4" -->
-    <caption class="personaTypes text-center"> High Volume, Low Touch</caption>
+    <caption class="personaTypes text-center"> Jenny, 68, Grandma</caption>
   <tbody class="text-center">
   <tr>
-      <td class="ajayTd">
-          <!-- <img class="ajay" alt="Story Board" src="myimages/webmd/synthesis/story-board.png"> -->
-      </td>
+    <td class="">
+        <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/jenny.png">
+    </td>
 
-      <td class="textBoxName ajayName padding">
-        <p class="SalesmanName boxTitles">Ajay</p>
-        <p>Age: 26</p>
-        <p>Location: New York, NY</p>
-        <p>Marital Status: Single</p>
-        <p>Occupation: Sales Hacker</p>
+      <td class="textBoxName white webmdBlueBack padding">
+        <p>Age: 69</p>
+        <p>Location: Long Island, NY</p>
+        <p>Marital Status: Married</p>
+        <p>Family: daughter 47, grandson, 9</p>
+        <p>Occupation: Retired scientist</p>
       </td>
   </tr>
 
   <tr>
     <td class="textBoxGoals padding">
       <p class="boxTitles">Goals</p>
-        <p>- Save time </p>
-        <p>- Meet aggressive sales targets</p>
-        <p>- Get commission</p>
+        <p>- Learning how to counteract old age</p>
+        <p>- Learning about her husband's heart condition</p>
+        <p>- Manage her blood pressure</p>
     </td>
     <td class="textBoxFrustrations padding">
-        <p class="boxTitles">Frustrations</p>
-        <p>- 50% of day spent prospecting</p>
-        <p>- Relies on email marketing, 5% response rate</p>
-        <p>- Uses overseas fact checkers, very slow</p>
+        <p class="boxTitles">Pain Points</p>
+        <p>- Repeated searchs for the same disease</p>
+        <p>- Accidently getting funneled into ads</p>
+        <p>- Symptom checkers alarming suggestions</p>
     </td>
   </tr>
   </tbody>
 
 </table>
 
-<!-- Ajay -->
-<table class="">
-  <caption class="personaTypes text-center"> Sharon, 40, Mom</caption>
+
+<table class="personas">
+  <caption class="personaTypes text-center"> Steve, 28, Software Engineer</caption>
 <tbody class="text-center">
 <tr>
-    <td class="ajayTd">
-        <img class="sharon" alt="Story Board" src="myimages/webmd/synthesis/sharon.png">
+    <td class="">
+        <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/steve.png">
     </td>
 
-    <td class="textBoxName ajayName padding">
-      <p class="SalesmanName boxTitles">Ajay</p>
-      <p>Age: 26</p>
-      <p>Location: New York, NY</p>
+    <td class="textBoxName white webmdBlueBack padding">
+      <p>Age: 28</p>
+      <p>Location: Austin, TX</p>
       <p>Marital Status: Single</p>
-      <p>Occupation: Sales Hacker</p>
+      <p>Family: parents and granparents</p>
+      <p>Occupation: Developer</p>
     </td>
 </tr>
 
 <tr>
   <td class="textBoxGoals padding">
     <p class="boxTitles">Goals</p>
-      <p>- Save time </p>
-      <p>- Meet aggressive sales targets</p>
-      <p>- Get commission</p>
+      <p>- Quickly read articles on-the-go</p>
+      <p>- Keep up to date on fitness news</p>
+      <p>- Follow article on disbetes for his grandma</p>
   </td>
   <td class="textBoxFrustrations padding">
-      <p class="boxTitles">Frustrations</p>
-      <p>- 50% of day spent prospecting</p>
-      <p>- Relies on email marketing, 5% response rate</p>
-      <p>- Uses overseas fact checkers, very slow</p>
+      <p class="boxTitles">Pain Points</p>
+      <p>- Too much time needed to search through vast content</p>
+      <p>- Articles that lack credible sources</p>
+      <p>- Heavy/shock articles on heavy diseases</p>
   </td>
 </tr>
 </tbody>
 
 </table>
 
-<!-- Ajay -->
-<table class="">
-  <caption class="personaTypes text-center"> High Volume, Low Touch</caption>
+
+<table class="personas">
+  <caption class="personaTypes text-center">Sharon, 40, Mom</caption>
 
 <tbody class="text-center">
 <tr>
-    <td class="ajayTd">
-        <!-- <img class="ajay" alt="Story Board" src="myimages/webmd/synthesis/story-board.png"> -->
-    </td>
+  <td class="">
+      <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/sharon.png">
+  </td>
 
-    <td class="textBoxName ajayName padding">
-      <p class="SalesmanName boxTitles">Ajay</p>
-      <p>Age: 26</p>
-      <p>Location: New York, NY</p>
-      <p>Marital Status: Single</p>
-      <p>Occupation: Sales Hacker</p>
+    <td class="textBoxName white webmdBlueBack  padding">
+      <p>Age: 35</p>
+      <p>Location: Danville, CA</p>
+      <p>Marital Status: Married</p>
+      <p>Family: One child, 4 </p>
+      <p>Occupation: Teacher</p>
     </td>
 </tr>
 
 <tr>
   <td class="textBoxGoals padding">
     <p class="boxTitles">Goals</p>
-      <p>- Save time </p>
-      <p>- Meet aggressive sales targets</p>
-      <p>- Get commission</p>
+      <p>- Keep herself healthy</p>
+      <p>- Keep her family healthy</p>
+      <p>- Changing perferences as her child grows</p>
   </td>
   <td class="textBoxFrustrations padding">
-      <p class="boxTitles">Frustrations</p>
-      <p>- 50% of day spent prospecting</p>
-      <p>- Relies on email marketing, 5% response rate</p>
-      <p>- Uses overseas fact checkers, very slow</p>
+      <p class="boxTitles">Pain Points</p>
+      <p>- Inaccurate or ambiguous information</p>
+      <p>- Repeat searches for same illness</p>
+      <p>- Too much "junk" on the page</p>
   </td>
 </tr>
 </tbody>
@@ -530,8 +544,6 @@
 </table>
 
 </div>
-
-
     <div class="statement webmdBlue">The problem: redefined</div>
 <div class="problem">
     <p class="problemTitle">While WebMD is a complex site, with a lot of confounding issues, from the user&#39;s perspective the problem is cheifly two fold:</p>
