change surgery bubbles

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -182,7 +182,7 @@
 
     <div><p class="statement webmdGreen">If you can't beat 'em join 'em.</p></div>
     <div class="compThreatDiv">
-      <p class="compThreatP webmdBlue">Instead of seeing competitiors as a threat, reach out to them as a partner
+      <p class="compThreatP">Instead of seeing competitiors as a threat, reach out to them as a partner
     </div>
 
     <div class="compThreatLogosDiv">
@@ -204,7 +204,7 @@
     </div>
 
     <div class="compThreatDiv">
-      <p class="compThreatP compThreatPWeb webmdGreen">What WebMd offers its competitors
+      <p class="compThreatP compThreatPWeb">What WebMd offers its competitors
     </div>
 
     <div class="bubbles">
@@ -212,7 +212,7 @@
     </div>
 
     <div class="compThreatDiv">
-      <p class="compThreatP compThreatPComp webmdBlue">What competitors can offer WebMD
+      <p class="compThreatP compThreatPComp ">What competitors can offer WebMD
     </div>
 
     <div class="bubbles">
@@ -246,9 +246,14 @@
     <p>While experience with WebMD varied for our survey takers, <b>what our intial research made clear is that WebMD is far from our goal of making it a daily habit</b>.</p>
 </div>
 
+
 <div class="surveyResults">
+
+<!--
+    <p class="surveyConclusionText">People don&#39;t visit WebMD often</p> -->
+
   <div class="surveyResultsSec">
-      <div class="surveyConclusion webmdBlueBack">
+      <div class="surveyConclusion">
       <p class="surveyConclusionText">People don&#39;t visit WebMD often</p>
       </div>
       <div class="surveyCircles">
@@ -257,7 +262,7 @@
   </div>
 
   <div class="surveyResultsSec">
-    <div class="surveyConclusion webmdBlueBack">
+    <div class="surveyConclusion">
       <p class="surveyConclusionText">And&#8230; People don&#39;t stay long</p>
     </div>
       <div class="surveyQuotes">
@@ -270,7 +275,7 @@
   </div>
 
   <div class="surveyResultsSec">
-      <div class="surveyConclusion webmdBlueBack">
+      <div class="surveyConclusion">
           <p class="surveyConclusionText">People prefer apps<br> &amp want to try wearables</br></p>
       </div>
       <div class="surveyCircles">
