Fix strategy titles in:  if you can't beat them join

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -182,7 +182,7 @@
 
     <div><p class="statement webmdGreen">If you can't beat 'em join 'em.</p></div>
     <div class="compThreatDiv">
-      <p class="compThreatP webmdBlue">Instead of seeing competitiors as a threat, reach out to them as a partner
+      <p class="compThreatP">Instead of seeing competitiors as a threat, reach out to them as a partner
     </div>
 
     <div class="compThreatLogosDiv">
@@ -204,7 +204,7 @@
     </div>
 
     <div class="compThreatDiv">
-      <p class="compThreatP compThreatPWeb webmdGreen">What WebMd offers its competitors
+      <p class="compThreatP compThreatPWeb ">What WebMd offers its competitors
     </div>
 
     <div class="bubbles">
@@ -212,7 +212,7 @@
     </div>
 
     <div class="compThreatDiv">
-      <p class="compThreatP compThreatPComp webmdBlue">What competitors can offer WebMD
+      <p class="compThreatP compThreatPComp">What competitors can offer WebMD
     </div>
 
     <div class="bubbles">
