Removing excess code

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -238,7 +238,7 @@
       <img class="researchSummary" alt="Summary of Research" src="myimages/webmd/research/research-summary.png">
     </div>
 
-<div><p class="statement webmdBlue">Initial key survey and interview results.</p></div>
+<div><p class="statement webmdBlue">Survey results</p></div>
 
 <div class="heavyText surveyResultsP">
     <p>WebMD serves a <b>diverse group of clients</b> all of which have different health information needs, socioeconomic stats, technological capabilties, and demographics - <b>a difficult audience to please.</b></p>
@@ -263,7 +263,7 @@
       <div class="surveyQuotes">
         <p>&#34;<b>I don&#39;t spend too much time on WebMD</b>, just try to <b>get the info and leave.</b>&#34;</p>
           <p>Bob, 28, Web Developer</p>
-        <p class="quote2">&#34;I try not to look at health stuff online&#8230; my husband says stop&#8230; you will freak yourself out!&#34;</p>
+        <p class="quote2">&#34;<b>I try not to look at health stuff online</b>&#8230; my husband says stop&#8230; <b>you will freak yourself out!&#34;</b></p>
         <p> Sarah, 20, Store Manager</p>
       </div>
 
@@ -402,7 +402,7 @@
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
 
 <div class="centerJMap">
-  <p class="journeyTitle"><b>Affinity Map:</b> idenitifies the key pain points</p>
+  <p class="journeyTitle"><b>Affinity Map:</b> helps identify key pain points</p>
 
   <img class="journeyMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
 </div>
@@ -549,11 +549,13 @@
     <p class="problemTitle">While WebMD is a complex site, with a lot of confounding issues, from the user&#39;s perspective the problem is cheifly two fold:</p>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">1</p></div>
-      <div class="decText problemText"><p><b>A perceived lack of quality and "trust" in WebMD content</b>: fluffy articles, often scary and ad-filled </p> </div>
+      <div class="decText problemText"><p ><b>Perceived lack of quality and "trust" in WebMD</b><p>
+      <p class= "problemSubText"> Content is fluffy, often scary, and ad-filled </p> </div>
     </div>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">2</p></div>
-      <div class="decText problemText"><p><b>Getting lost in a sea of health care information,</b> not easy to find only the articles pertinent to them or their family </p> </div>
+      <div class="decText problemText"><p><b>Getting lost in a sea of health care information</b></p>
+      <p class= "problemSubText">It's not easy to find only the articles pertinent to them or their family </p> </div>
     </div>
 </div>
 
