fix typos in personas

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -493,7 +493,7 @@
     <p class="boxTitles">Goals</p>
       <p>- Quickly read articles on-the-go</p>
       <p>- Keep up to date on fitness news</p>
-      <p>- Follow article on disbetes for his grandma</p>
+      <p>- Follows article on diabetes for his grandmother</p>
   </td>
   <td class="textBoxFrustrations padding">
       <p class="boxTitles">Pain Points</p>
