editing affinity map

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -367,7 +367,7 @@
 
     <div class="findingsText">
 
-        <p class="heavyText"><b>Validated WebMD&#39;s concerns that people need a more personalized experience</b></p>
+        <p class="heavyText"><b>Our research validated WebMD&#39;s concerns that people need a more personalized experience</b></p>
     </div>
 </div>
 
@@ -375,15 +375,7 @@
     <div class="findingsCircle webmdGreenBack"></div>
 
     <div class="findingsText">
-      <p class="heavyText"><b>People are comfortable using apps for health information</b>, many even prefer it</p>
-    </div>
-
-</div>
-<div class="findings">
-    <div class="findingsCircle webmdGreenBack"></div>
-
-    <div class="findingsText">
-      <p class="heavyText"><b>Not that many people have wearables, but most are interested in trying them.</b></p>
+      <p class="heavyText"><b>People are comfortable using apps for health information and are also very interested in trying wearables</b></p>
     </div>
 
 </div>
@@ -401,35 +393,16 @@
 
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
 
-<div class="centerJMap">
-  <p class="journeyTitle"><b>Affinity Map:</b> helps identify key pain points</p>
+<div class="centerAMap">
+  <p class="affinity webmdBlue">Our affinity map</p>
+  <p class="affinityDes">A brainstorming tool that helps us to outline the users key pain points</p>
 
-  <img class="journeyMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
-</div>
-<div class="painPoints">
-  <p>Pain Points include:</p>
-  <p>Accidently fing your self in sponsor generated content</p>
-  <p>Not being able to find...</p>
+  <img class="affinityMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
 </div>
 
-
-  <!-- <p class=" statement webmdBlue">Affinity Map idenitifies the key pain points</p> -->
-
-  <div class="">
-
-  <p class=" statement storyboardTitle">Storyboard demonstrates interactions with app and wearable</p>
-
-  <p class="storyboardSubtitle charcol">And my stick figures are ledgendary</p>
-
-  </div>
-  <!-- <p class="storyBoardSub">And my stick figures are ledgendary</p> -->
-
-<div class="storyBoardDiv">
-  <img class="storyBoard" alt="Story Board" src="myimages/webmd/synthesis/story-board.png">
-</div>
 
 <div class="">
-    <div class="statement statementPersonas webmdGreen">Our personas</div>
+    <div class=" statement statementPersonas webmdGreen">Our personas</div>
 </div>
 
 <div class="row personaParent">
@@ -440,7 +413,7 @@
   <tbody class="text-center">
   <tr>
     <td class="">
-        <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/jenny.png">
+        <img class="personaImg" alt="Persona Image" src="myimages/webmd/synthesis/jenny.png">
     </td>
 
       <td class="textBoxName white webmdBlueBack padding">
@@ -476,7 +449,7 @@
 <tbody class="text-center">
 <tr>
     <td class="">
-        <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/steve.png">
+        <img class="personaImg" alt="Persona Image" src="myimages/webmd/synthesis/steve.png">
     </td>
 
     <td class="textBoxName white webmdBlueBack padding">
@@ -513,7 +486,7 @@
 <tbody class="text-center">
 <tr>
   <td class="">
-      <img class="personaImg" alt="Story Board" src="myimages/webmd/synthesis/sharon.png">
+      <img class="personaImg" alt="Personas Image" src="myimages/webmd/synthesis/sharon.png">
   </td>
 
     <td class="textBoxName white webmdBlueBack  padding">
@@ -546,7 +519,7 @@
 </div>
     <div class="statement webmdBlue">The problem: redefined</div>
 <div class="problem">
-    <p class="problemTitle">While WebMD is a complex site, with a lot of confounding issues, from the user&#39;s perspective the problem is cheifly two fold:</p>
+    <p class="problemTitle">WebMD is a complex site, but from the user&#39;s perspective the problem is two fold:</p>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">1</p></div>
       <div class="decText problemText"><p ><b>Perceived lack of quality and "trust" in WebMD</b><p>
@@ -554,9 +527,10 @@
     </div>
     <div class="bullet">
       <div class="decCircle webmdGreenBack"><p class="decNumber">2</p></div>
-      <div class="decText problemText"><p><b>Getting lost in a sea of health care information</b></p>
+      <div class="decText problemText"><p><b>Getting lost in a sea of generic health care information</b></p>
       <p class= "problemSubText">It's not easy to find only the articles pertinent to them or their family </p> </div>
     </div>
+
 </div>
 
 <div class="statement webmdBlue">Our solution: two high level experiences</div>
@@ -581,7 +555,17 @@
   </div>
 </div>
 
-<div class="processSectionTitle">Design</div>
+<div class="processSectionTitle webmdDesign">Design</div>
+
+<div class="">
+<p class=" statement storyboardTitle webmdBlue">Storyboard demonstrates interactions with our proposed app and wearable.</p>
+
+<p class="storyBoardSub">And my stick figures are ledgendary</p>
+
+<div class="storyBoardDiv">
+<img class="storyBoardImg" alt="Story Board" src="myimages/webmd/synthesis/story-board.png">
+</div>
+</div>
 
   <div class="statement webmdGreen featureTitleMargins">Initial concept &amp features</div>
 
